--- a/css/responsive.css
+++ b/css/responsive.css
@@ -67,12 +67,14 @@
     font-size: 0.825em;
     margin-bottom: 20px;
     margin-left: 2px;
+    letter-spacing: 0.25em;
   }
 
   header {
     border-bottom: 5px solid #599a68;
     margin-bottom: 60px;
   }
+
 
 
 }
