--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,6 @@ body {
   max-width: 940px;
   margin: 0 auto;
   padding: 0 5%;
-  /*background: yellow;*/
 }
 
 a {
@@ -182,7 +181,7 @@ body {
   color: #999;
 }
 
-/* green header */
+/* texture header */
 header {
   background-image: url(../img/paper_texture.jpg);
   background-size: 800px;
@@ -205,7 +204,7 @@ h2 {
 
 /* links */
 a {
-  color: #6ab47b;
+  color: #08afdd;
 }
 
 /* nav link */
@@ -218,8 +217,6 @@ nav a, nav a:visited {
   /*Two Best Blue Below*/
   /*color: #09c3f6;*/
   color: #08afdd;
-  /*Purple*/
-  /*color: #6467ae;*/
 }
 /* selected nav link */
 nav a.selected, nav a:hover {
