--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,11 @@ body {
   max-width: 940px;
   margin: 0 auto;
   padding: 0 5%;
+  padding-bottom:100px;
 }
+
+/*#content {
+	padding-bottom:100px;*/
 
 a {
   text-decoration: none;
@@ -55,6 +59,9 @@ h2 {
   font-weight: normal;
 }
 
+
+
+
 /***********************************
 NAVIGATION
 ***********************************/
@@ -89,9 +96,25 @@ footer {
   font-size: 0.75em;
   text-align: center;
   clear: both;
-  padding-top: 50px;
+  /*padding-top: 50px;*/
+  /*padding-top: 200px;*/
   color: #ccc;
 
+  width:100%;
+	height:100px;
+	position:absolute;
+	bottom:0;
+	left:0;
+  right: 0;
+}
+
+#footer {
+  font-size: 0.75em;
+  text-align: center;
+  clear: both;
+  /*padding-top: 50px;*/
+  padding-top: 5%;
+  color: #ccc;
 }
 
 .social-icon {
@@ -112,18 +135,10 @@ Page: PORTFOLIO
 
 #gallery li {
   float: left;
-  width: 45%;
+  width: 50%;
   margin: 2.5%;
-  background-color: #f5f5f5;
-  color: #bdc3c7;
 }
 
-#gallery li a p {
-  margin: 0;
-  padding: 5%;
-  font-size: 0.75em;
-  color: #bdc3c7;
-}
 
 
 
@@ -136,6 +151,13 @@ Page: ABOUT
   max-width: 150px;
   margin: 0 auto 30px;
   border-radius: 100%;
+}
+
+.pink-photo {
+  display: block;
+  max-width: 220px;
+  margin: 0 auto 30px;
+  /*border-radius: 100%;*/
 }
 
 /***********************************
